fix(announcements): body not vertically aligned with title

--- a/packages/app/src/design/app.scss
+++ b/packages/app/src/design/app.scss
@@ -200,7 +200,7 @@ body {
 }
 
 [data-user-html] > {
-  p {
+  p:not(:last-child) {
     margin-bottom: 1em;
   }
 
